[gd_scene load_steps=2 format=3 uid="uid://ctlryxi2krbpr"]

[ext_resource type="Script" path="res://common/clickable_area.gd" id="1_ldwoc"]

[node name="ClickableArea" type="Area2D"]
script = ExtResource("1_ldwoc")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
